welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: ')' expected but '}' found.
if(estSurBiscuit) {x=x+1} ; if (estSurOrange}
                                            ^